Modification du pom.xml pour mettre à jour la version de Java + retrait de la fonction addFirst